# Cache-Explorer

./: .clangd  .dockerignore  .gitignore  .gitmodules  ACTUAL_STATUS.md  BUILD.md  CHANGELOG.md  CHANGES.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUTURE_DEV.md  LICENSE  NEXT_STEPS.md  PROJECT_REQUIREMENTS.md  README.md  ROADMAP.md  build.sh  cachegrind.out.4731  conan_profile_release.txt  conanfile.txt  docker-compose.yml  release-please-config.json
.cache/clangd/index/: main.cpp.063CA9F265C78597.idx
.conan/: remotes.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docker.yml  integration-tests.yml  release-please.yml  release.yml  validation.yml
action/: action.yml
backend/: CMakeLists.txt
backend/cache-simulator/: CACHE_SIMULATION_REQUIREMENTS.md  CMakeLists.txt  generator.cpp  generator.h
backend/cache-simulator/include/: AdvancedStats.hpp  ArgParser.hpp  CacheLevel.hpp  CacheLine.hpp  CacheStats.hpp  CacheSystem.hpp  CoherenceController.hpp  CoherenceState.hpp  EvictionPolicy.hpp  FastIO.hpp  InclusionPolicy.hpp  JsonOutput.hpp  L1Cache.hpp  L2Cache.hpp  L3Cache.hpp  MemoryAccess.hpp  MultiCoreCacheSystem.hpp  MultiCoreTraceProcessor.hpp  OptimizationSuggester.hpp  Prefetcher.hpp  SegmentCache.hpp  TLB.hpp  TraceEvent.hpp  TraceProcessor.hpp  WritePolicy.hpp
backend/cache-simulator/profiles/: CacheConfig.hpp  DefaultConfig.hpp  HardwarePresets.hpp
backend/cache-simulator/src/: ArgParser.cpp  CacheLevel.cpp  CacheSystem.cpp  CoherenceController.cpp  JsonOutput.cpp  MultiCoreCacheSystem.cpp  MultiCoreTraceProcessor.cpp  OptimizationSuggester.cpp  Prefetcher.cpp  SegmentCache.cpp  TLB.cpp  TraceProcessor.cpp  main.cpp
backend/cache-simulator/tests/: AdvancedInstrumentationTest.cpp  ArgParserTest.cpp  CacheLevelTest.cpp  CacheSystemTest.cpp  JsonOutputTest.cpp  MESICoherenceTest.cpp  MultiCorePrefetchTest.cpp  MultiCoreTLBTest.cpp  SegmentCacheTest.cpp  TraceProcessorTest.cpp
backend/cli/: CMakeLists.txt
backend/docker/: Dockerfile  build-image.sh  sandbox-run.sh  seccomp-profile.json
backend/instrumentation/: CMakeLists.txt
backend/integration/bazel/: BUILD.bazel  cache_explorer.bzl  check_hit_rate.sh  run_analysis.sh
backend/integration/cargo/: Cargo.toml  build.rs  lib.rs
backend/integration/cmake/: CacheExplorerConfig.cmake  CacheExplorerToolchain.cmake
backend/llvm-pass/: CMakeLists.txt  CacheExplorerPass.cpp  CacheExplorerPass.hpp  CacheProfilerPass.h  README.md
backend/pin-tool/: README.md  cache_profiler.cpp
backend/runtime/: CMakeLists.txt  cache-explorer-rt.c  cache-explorer-rt.h  zig_stubs.c
backend/runtime/tests/: test_rt.c
backend/scripts/: build-passes.sh  build.sh  cache-explore  cache-explore-build-pass  cache-explore-cache  cache-explore-cc  cache-explore-cmake  cache-explore-compare  cache-explore-cxx  cache-explore-download-pass  cache-explore-make  cache-explore-pin  cache-explore-report  cache-explore-run  cache-explore-zig
backend/server/: CMakeLists.txt  cache.js  compilers.js  config.js  db.js  docker-runner.js  main.cpp  metrics.js  openapi.yaml  package-lock.json  package.json  sandbox.js  server.cpp  server.js
backend/server/data/: cache-explorer.db  cache-explorer.db-shm  cache-explorer.db-wal
backend/server/middleware/: resourceTracker.js
backend/server/routes/: compilers.js  health.js  index.js  share.js
backend/server/services/: errorParser.js
backend/validation/: Dockerfile  minimal_test.c  test_known_patterns.c  validate-cache.sh  validate.sh
docker/: Dockerfile  Dockerfile.backend  Dockerfile.frontend  build-image.sh  nginx.conf  run.sh
docs/: FRONTEND_MULTIFILE_VERIFICATION.md  HOW_TO_READ_RESULTS.md  OPTIMIZATION_PATTERNS.md  PROJECT_STATUS.md  QUICK_START.md  USER_GUIDE.md  VALIDATION.md  VALIDATION_PLAN.md
docs/plans/: 2024-12-30-deployment-design.md  2024-12-30-hardware-validation-design.md  2026-01-02-phase1-production-ready.md  2026-01-04-app-tsx-final-refactoring.md  2026-01-04-app-tsx-refactoring.md  2026-01-04-multifile-and-assembly-view.md  2026-01-07-cpp-modernization.md
docs/tests/: multifile-assembly-integration.md
examples/: README.md  array_of_structs.c  array_walk_rust.rs  binary_search.c  cache_blocking.c  cache_blocking.cpp  cache_line_align.c  demo-bad.c  demo-good.c  false_sharing.c  false_sharing.cpp  false_sharing.rs  hash_table.c  image_blur.c  linked_list.c  linked_list.cpp  loop_fusion.c  loop_interchange.c  matrix_col.c  matrix_col.cpp  matrix_row.c  matrix_row.cpp  memory_pool.c  prefetch_friendly.c  prefetch_unfriendly.c  quicksort.c  quicksort.cpp  sequential.c  sequential.cpp  strided.c  string_search.c  struct_of_arrays.c  struct_of_arrays.cpp  working_set_large.c  working_set_small.c
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.redesign.css  App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: AccessTimelineDisplay.tsx  AdvancedOptionsModal.tsx  AdvancedStatsPanel.tsx  BatchResultsModal.tsx  CacheDetailComponents.tsx  CacheGrid.css  CacheGrid.tsx  CacheHierarchyDisplay.tsx  index.ts  (+30 more)
scripts/: build.sh  download-llvm-interpreter.sh  setup.sh  validate-accuracy.sh
src/engine/: CMakeLists.txt  analyzer.cpp  analyzer.h  compiler.cpp  compiler.h  main.cpp  server.cpp  server.h
tests/e2e/: run_tests.sh
tests/integration/: README.md  run-all-tests.sh  test-all-presets.sh  test-features.sh
tests/segment-caching/: test_integration.sh
tests/validation/: run_all_validations.sh
tests/zig-support/: IMPLEMENTATION_PLAN.md  test_zig.sh
validation/: setup-server.sh  validate-against-baseline.sh  validate-hardware.sh
validation/baselines/: placeholder.json  xeon-platinum-8488c.json
validation/benchmarks/: linked_list.c  matrix_col.c  matrix_row.c  random.c  sequential.c  strided_16.c  strided_64.c  working_set.c
vscode-extension/: package-lock.json  package.json
vscode-extension/src/: cacheExplorerProvider.ts  extension.ts  profileCommand.ts
(+51 files in other folders)
